@@ -19,20 +19,27 @@ antlr.version=2.7.6
 
 commons-beanutils.version=1.7.0
 commons-cli.version=1.0
+commons-el.version=1.0
 commons-logging.version=1.0.3
 checkstyle.version=4.2
 
-ivy.version=2.0.0-rc2
+hadoop-core.version=0.20.2
+hadoop-test.version=0.20.2
 
-javacc.version=4.2
-jline.version=0.9.94
-jsch.version=0.1.38
-junit.version=4.5
-jdiff.version=1.0.9
-
-rats-lib.version=0.5.1
-
-xerces.version=1.4.4
+ivy.version=2.1.0
 
 jackson.version=1.0.1
+javacc.version=4.2
+jdiff.version=1.0.9
+jetty-util.version=6.1.14
+jline.version=0.9.94
 joda-time.version=1.6
+jsch.version=0.1.38
+junit.version=4.5
+
+log4j.version=1.2.14
+
+rats-lib.version=0.5.1
+slf4j-api.version=1.4.3
+slf4j-log4j12.version=1.4.3
+xerces.version=1.4.4
